# click-bait

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: pr_checks.yml
assets/: my_brothers.json
devops/: run__00.sh  run__01.sh  run__02.sh
src/: 00__example.py  01__example.py  02__example.py
