[project]
name = "click-bait"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "click==8.3.1",
    "psycopg2==2.9.11",
    "sqlalchemy==2.0.46",
    "pyinstaller==6.18.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-ignore = [
    "F401",
    "E203",
    "E266",
    "E402",
    "E501",
    "E711",
    "E712",
    "F403",
    "F821",
]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
# Strict type checking configuration
strict = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
